Stretch Task done by fixing the navigation bar

--- a/css/index.css
+++ b/css/index.css
@@ -164,6 +164,9 @@ p {
   margin: 0 auto;
 }
 header {
+  position: fixed;
+  transition: 0.5s;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -197,11 +200,13 @@ footer {
   align-items: center;
 }
 .home .intro img {
+  margin-top: 16.8%;
   border-radius: 5px;
 }
 @media (max-width: 500px) {
   .home .intro img {
     max-width: 100%;
+    margin-top: 16%;
   }
 }
 .home .intro h2 {
