--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,9 +5,11 @@
   .intro {
 
     img {
+      margin-top: 16.8%;
       border-radius: 5px;
       @media @mobile {             
-        max-width: 100%;      
+        max-width: 100%;  
+        margin-top: 16%;    
       }
     } 
 
