--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,8 @@
 // Navigation code here
 header {    
+    position: fixed;
+    transition: .5s;
+    width: 100%;
 
     .custom-layout(column ,center, center);
     background-color: @nav-bg;    
@@ -12,6 +15,8 @@ header {
         text-align: center;
         padding-bottom: 1%;
         width: 100%;
+
+       
 
         a {
             .font-size-weight(1.7rem, bold);
